Contacts page designed.

--- a/InvestingApp/InvestingApp.csproj
+++ b/InvestingApp/InvestingApp.csproj
@@ -158,6 +158,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\envelope.png" />
+    <Content Include="Content\Images\facebook.png" />
+    <Content Include="Content\Images\github.png" />
+    <Content Include="Content\Images\linkedin.png" />
+    <Content Include="Content\Images\marker.png" />
+    <Content Include="Content\Images\photo.jpg" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
