--- a/InvestingApp/Web.config
+++ b/InvestingApp/Web.config
@@ -34,7 +34,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="api_key" value="test" />
+    <add key="api_key" value="526FBBFBDEE1483FB4157826008008A1" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
