--- a/InvestingApp/Web.config
+++ b/InvestingApp/Web.config
@@ -71,9 +71,7 @@
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
-      <add name="Npgsql Data Provider" invariant="Npgsql"
-        support="FF" description=".Net Framework Data Provider for Postgresql"
-        type="Npgsql.NpgsqlFactory, Npgsql" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
     </DbProviderFactories>
   </system.data>
 
