--- a/InvestingApp/packages.config
+++ b/InvestingApp/packages.config
@@ -25,5 +25,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Npgsql" version="2.2.7" targetFramework="net45" />
   <package id="Npgsql.EntityFramework" version="2.2.7" targetFramework="net45" />
+  <package id="RazorHtmlMinifier.Mvc5" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
